src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/prebuilt-themes/indigo-pink.css";
html, body {
    height:100%;
    margin: 0;
    padding: 0;
    background-color: white;
    font-size: 10pt;
}

.not-for-screen {
    display: none;
}

h1 {
    font-size: 1.8em;
}

h2 {
    font-size: 1.6em;
}

h3 {
    font-size: 1.2em;
}

h4 {
    font-size: 1em;
    font-weight: bold;
}

div#leftBar {
    width: 236px;
}

div#orgUnitTree {
    height: 50%;
}

.top-bar {
    font-size: 16pt;
    font-weight: normal;
    color: #585D61;
}

.dashboard-top-bar {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

/*----------------------------------------------------------------------------*/
/* Form
/*----------------------------------------------------------------------------*/

.fixed-text-width {
    width: 260px;
}

input.option {
    width: 240px;
}

.fixed-select-width {
    width: 260px;
}

textarea {
    width: 264px;
}


/*----------------------------------------------------------------------------*/
/* Program-stage-instances
/*----------------------------------------------------------------------------*/

.data-entry {
    overflow: scroll;
}

.table-flow {
    height:100px;
    overflow-x:hidden;
    overflow-y:hidden;
}

.align-center {
    text-align: center;
}

.block {
    display: block;
}

.clear {
    clear: both;
}

.inline-block {
    display: inline-block;
}

.vertical-center {
    line-height: inherit;
    vertical-align: middle;
}

.empty-event-container {
    display: inline-block;
    opacity: 1.0;
    white-space: normal;
    padding-top: 5px;
    text-align: center;
}

.stage-container {
    display: inline-block;
    cursor: pointer;
    opacity: 1.0;
    white-space: normal;
    padding-top: 5px;
    text-align: center;
    border: 2px dotted;
    margin: 2px;
    padding: 5px;
    border-radius: 4px;
}

.stage-container:hover {
    border: 2px solid;
    font-weight: bold;
}

.event-container {
    cursor: pointer;
    opacity: 1.0;
    text-align: center;
    margin: 2px;
    padding: 5px;
    border: 2px dotted;
    border-radius: 4px;
}

.event-container:hover {
    border: 2px solid;
    font-weight: bold;
}

.stage-completed {
    background-color: #b9ffb9;
}

.stage-on-time {
    background-color: #fffe8c;
}

.stage-overdue {
    background-color: #ff8a8a;
}

.current-stage {
    border: 2px solid;
    font-weight: bold;
}

/*----------------------------------------------------------------------------*/
/* App - specific
/*----------------------------------------------------------------------------*/

.container-heading {
    color: white;
}

div.paging a.active
{
    text-decoration: none;
    color: #000;
    cursor: default;
}

.input-error {
    background-color: #ff8a8a !important;
}

.input-success {
    background-color: #b9ffb9 !important;
}

.alert-default {
    color: #55514d;
    background-color: #D5CBC1;
    border-color: #aaa29a;
}

.stick {
    font-weight: bolder;
    color: #000000;
    background-color: #6E6E6E;
}

.unstick {
    color: #000000;
    background-color: #FFFFFF;
}

.right {
    float: right !important;
}

.black {
    color: black;
}

.bold {
    font-weight: bold;
}

.light-blue {
    color: #67abcc;
}

.white {
    color: white;
}

.error {
    color:red;
    font-size:12px;
}
.anchor-color {
    color: #276696;
}

.inline-div {
    display: inline-block;
    margin-right: 5px;
    float: left;
}

.bordered-div {
    border: 1px solid #c2c2c2;
    border-radius: 5px;
    padding: 5px 10px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.nav, .pagination, .carousel, .panel-title a {
    cursor: pointer;
    text-decoration: none;
}

input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=date]::-webkit-inner-spin-button, input[type=date]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.big-button {
    padding-left: 40px;
    padding-right: 40px;
}

.btn-no-border {
    border: none !important;
}

.max-column-width {
    max-width:200px !important;
    word-wrap:break-word;
}

.table-with-fixed-layout {
    table-layout: fixed;
}

.table-borderless {
    width: 100%;
    table-layout: fixed;
}

.table-borderless>thead>tr>th,
.table-borderless>tbody>tr>th,
.table-borderless>tfoot>tr>th,
.table-borderless>thead>tr>td,
.table-borderless>tbody>tr>td,
.table-borderless>tfoot>tr>td {
    border-top: none;
}

.table-borderless>tbody>tr>td{
    vertical-align: middle;
}

.listTable th {
    height: 30px;
}

.dhis2-table>thead>tr>th,
.dhis2-table>tbody>tr>th,
.dhis2-table>tfoot>tr>th,
.dhis2-table>thead>tr>td,
.dhis2-table>tbody>tr>td,
.dhis2-table>tfoot>tr>td {
    border-top: none;
    background-color: #ebf0f6;
}

.dhis2-table-striped-border {
    width: 100%;
    border-collapse: collapse;
    cursor: pointer;
    table-layout: fixed;
}

.dhis2-table-striped-border tr th {
    border: 1px solid #cad5e5;
}

.dhis2-table-striped-border tr td {
    border: 1px solid #cad5e5;
}

.dhis2-table-striped-border > tbody > tr:nth-child(odd)> td, .dhis2-table-striped > tbody > tr:nth-child(odd)> th {
    background-color: #ebf0f6
}

.dhis2-table-striped>thead>tr,
.dhis2-table-striped>tbody>tr,
.dhis2-table-striped>tfoot>tr,
.dhis2-table-striped>thead>tr,
.dhis2-table-striped>tbody>tr,
.dhis2-table-striped>tfoot>tr {
    border-bottom: 1px solid #cad5e5;
}

.dhis2-table-striped > tbody > tr:nth-child(odd)> td, .dhis2-table-striped > tbody > tr:nth-child(odd)> th {
    background-color: #ebf0f6
}

.dhis2-list-table-striped {
    width: 100%;
    padding: 5px 10px;
    table-layout: fixed;
}
/* ... */

